style/style.css
/* ... */
#menu_sidebar #sidebar_subtitle{
    padding: 0;
    margin: 0;

    font-family: Futura-Pt_Heavy;
    font-size: 25px;
}
#menu_sidebar p a{
    font-family: Futura-Pt_Light;
    font-size: 25px;

    color: black;

    text-decoration: none;
}
#menu_sidebar p .menu_sidebar_smaller{
    font-family: Futura-Pt_Light;
    font-size: 19px;
    margin-left: 20px;
}

#menu_content{
    grid-area: menu_content;
}

#menu_empty{
    grid-area: empty;
}

.menu_sectionIsVisible{
    font-family: Futura-Pt_Medium!important;
    color: var(--ta-pies_red)!important;
}

.menu_subtitle2, .menu_subtitle2_bold{
    padding: 0;
    margin: 0;
}

#sidebar_quicklinks p a{
    cursor: pointer;
}
.menu_subtext{
    padding: 0;
    margin: 0;

    margin-bottom: 30px;
}

/* Menu Grid */
.menu_grid{
    display: grid;

    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 30px;
}

.menu_food_item img{
    width: 100%;
    height: 250px;
    max-height: 300px;
    object-fit: cover;
}

.menu_food_item_name, .menu_subtitle2{
    margin-top: 10px;
    font-family: Futura-Pt_Medium;
    font-size: 30px;
}

.menu_subtitle2_bold{
    margin-top: 47px;
    font-family: Futura-Pt_Heavy;
    font-size: 30px;
    color: var(--ta-pies_red);
}

.menu_food_item_allergy_icons{
    height: 30px;
}

.menu_food_item_description, .menu_subtext{
    font-family: Futura-Pt_Book;
    font-size: 21px;
}

.menu_food_item_price{
    margin-top: 6px;
    margin-bottom: 30px;

    font-family: Futura-Pt_Medium;
    font-size: 21px;
}
.allergie_icons{
    display: grid;
    grid-template-columns: repeat(7, 38px);
    grid-template-areas:
        "sidebar menu_content" 
        ;
}
.allergie_icons img{
    height: 30px;
    width: auto;
}

/* Menu Page - Responsiveness */
@media screen and (max-width: 1500px) {
    #menu_outer{
        grid-template-columns: 1fr 3fr;
        grid-template-rows: auto;
        grid-template-areas:
            "sidebar menu_content" 
            ;
    }
}
@media screen and (max-width: 1200px) {
    #menu_outer{
        grid-template-columns: 1fr 3fr;
        grid-template-rows: auto;
        grid-template-areas:
            "sidebar menu_content" 
            ;
    }

    .menu_grid{
        grid-template-columns: 1fr 1fr;
    }
}
@media screen and (max-width: 770px) {
    #menu_outer{
        grid-template-columns: 1fr;
        grid-template-rows: auto auto auto;
        grid-template-areas:
            "empty" 
            "sidebar" 
            "menu_content" 
            ;
    }

    .menu_grid{
        grid-template-columns: 1fr;
    }

    #menu_sidebar_outer{
        position: fixed;
        width: auto;
        top: 81px;
        left:0%;        
        background-color: var(--bs-light-bg);
    }
    #menu_sidebar{
        border-bottom: 4px solid rgb(51, 51, 51);
        
        padding-top: 5px;
    }

    #menu_sidebar::-webkit-scrollbar{
        display: none;    
    }
    #menu_sidebar p{
        text-align: center;
        display: inline-block;
    }

    #menu_sidebar p a{
        position: relative;
        align-items: center;
        
        float: left;
        padding: 0 15px;

        border-left: 2px solid gray;
    }
    #menu_sidebar p #menu_sidebar_HotPies{
        border-left: 0;
    }

    .menu_sidebar_smaller{
        margin: 0!important;
    }

    #menu_sidebar #sidebar_subtitle{
        position: relative;
        align-items: center;
        display: block;

        margin-bottom: 5px;

        border-bottom: 4px solid rgb(51, 51, 51);
    }

    #menu_sidebar #sidebar_quicklinks{
        width: 100vw;
        
        overflow: auto;
        white-space:nowrap;
    }

    .main_extra_space{
        height: 148px;
    }
}

/***** About Us Page *****/
#about_us_container{
    display: grid;
    height: auto;

    column-gap: 30px;

    grid-template-columns: 1fr 1fr;
    grid-template-rows:auto;
    grid-template-areas:
        "text_ourStory picture_ourStory" 
        ;
}

#about_us_text{
    grid-area: text_ourStory;
}

#about_us_pic img{
    grid-area: picture_ourStory;
    width: 100%;
    height: 77vh;

    position: sticky;

    align-items: center;

    object-fit: cover;

    top: 148px;
    bottom: 0;
}

/* About Us Page - Responsiveness */
@media screen and (max-width: 1500px) {
    #about_us_container{
        grid-template-columns: 1fr;
        grid-template-rows: auto auto;
        grid-template-areas:
            "picture_ourStory" 
            "text_ourStory" 
            ;
    }
    #about_us_pic img{
        grid-area: picture_ourStory;

        width: 100%;
        height: auto;
    
        position: relative;
        top: 0;
        margin-bottom: 30px;
    }
}

/***** Contact Us Page *****/
#contact_us_main .heading_2, #contact_us_main .heading_3{
    text-align: center;
}

#contact_form{
    margin-top: 40px;
}

/* Adjusting the bloat of forms */
#contact_form label{
    padding: 0;
    margin: 0;
    margin-bottom: 10px;
}

#contact_form div input, #contact_form div textarea{
    width: 100%;
}

#contact_form div #btn_submit, #contact_form div #btn_clear{
    width: auto;
}

/* Contact Form Grid */
#contact_form{
    width: 960px;
    margin-left: auto;
    margin-right: auto;

    display: grid;

    column-gap: 30px;
    row-gap: 20px;

    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-template-areas:
        "firstname lastname"
        "contactnumber empty"
        "subject empty"
        "message message"
        "form_buttons form_buttons"
        ;
}

/* Form Empty Space */
#form_emptySpace{
    grid-area: empty;
    width: 100%;
    height: 100%;
}

/* Form Labels and Text Fields */
#form_first_name_outer{
    grid-area: firstname;
}
#form_first_name_outer p{
    grid-area: lbl_firstname;
}
#form_first_name_outer input{
    grid-area: txt_firstname;
}

#form_last_name_outer{
    grid-area: lastname;
}
#form_last_name_outer p{
    grid-area: txt_firstname;
}
/* ... */

